# pom_edu

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  index.html  pyproject.toml
.github/workflows/: ci.yaml
base/: base_page.py  base_test.py
chrome/: index.html
chrome/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
chrome/export/: influxDbData.txt  prometheusData.txt
chrome/history/: duration-trend.json  history.json
chrome/widgets/: behaviors.json  duration-trend.json  severity.json  status-chart.json  summary.json
config/: links.py
edge/: index.html
edge/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
edge/export/: influxDbData.txt  prometheusData.txt
edge/history/: history.json
edge/widgets/: behaviors.json  duration-trend.json  severity.json  status-chart.json  summary.json
firefox/: index.html
firefox/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
firefox/export/: influxDbData.txt  prometheusData.txt
firefox/history/: duration-trend.json  history.json
firefox/widgets/: behaviors.json  duration.json  severity.json  (+2 more)
pages/: cart_page.py  checkout_complete_page.py  checkout_step_one.py  checkout_step_one_page.py  checkout_step_two.py  checkout_step_two_page.py  login_page.py  products_page.py
tests/: test_cart_page.py  test_cehckout_complete_page.py  test_checkout_complete_page.py  test_checkout_page_one.py  test_checkout_page_two.py  test_log_in.py  test_product_page.py
(+180 files in other folders)
